--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "microBlock IDE",
-    "short_name": "microBlock IDE",
+    "name": "NewCoder (Old School)",
+    "short_name": "NewCoder",
     "icons": [
         {
             "src": "images/logo/icon-128x128.png",
@@ -36,5 +36,5 @@
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#FFFFFF",
-    "theme_color": "#1C2833"
+    "theme_color": "#194C66"
 }
